# path-tracer

./: .gitignore  CMakeLists.txt  README.md  scene.ini
scenes/: README.md  refactor.py
scenes/bedroom/: bedroom.mtl  bedroom.xml
scenes/cornell/: cornell-box.xml  cornell.mtl  cornell.xml
scenes/cornell-box/: cornell-box.mtl  cornell-box.xml
scenes/cornell-simple/: cornell-simple.mtl
scenes/cornell-sphere/: cornell-sphere.mtl  cornell-sphere.xml
scenes/staircase/: staircase.mtl  staircase.xml
scenes/veach-mis/: veach-mis.mtl  veach-mis.xml
src/: main.cpp
src/bvh/: bound.cpp  bound.h  bvh.cpp  bvh.h  node.cpp  node.h
src/camera/: camera.cpp  camera.h  pinhole_camera.cpp  pinhole_camera.h  thin_lens_camera.cpp  thin_lens_camera.h
src/geometry/: intersection.cpp  mesh.cpp  mesh.h  object.cpp  object.h  primitive.cpp  primitive.h  scene.cpp  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/light/: point.cpp  point.h  surface.cpp  surface.h
src/material/: lambert.cpp  lambert.h  light.cpp  light.h  material.cpp  material.h  microfacet_reflection.cpp  microfacet_reflection.h  mix.cpp  mix.h  parameter.cpp  parameter.h  phong.cpp  phong.h  refraction.cpp  refraction.h  skybox.cpp  skybox.h  texture.cpp  texture.h
src/ray/: intersection.h  ray.cpp  ray.h
src/renderer/: path_tracer.cpp  path_tracer.h
src/scene/: alias_table.cpp  alias_table.h  object.cpp  object.h  scene.cpp  scene.h
src/utils/: funcs.cpp  funcs.h  generator.cpp  generator.h  global.cpp  global.h  obj_loader.cpp  obj_loader.h  timer.cpp  timer.h  xml_loader.cpp  xml_loader.h
